--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
   "version": 2,
-  "redirects": [
+  "headers": [
     {
-      "source": "/:path*",
-      "destination": "https://oucluoyu.top/:path*",
-      "permanent": true
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Vercel-Test",
+          "value": "Success! The vercel.json file was detected."
+        }
+      ]
     }
   ]
 }
