--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "rewrites": [
-    {
-      "source": "/api/user",
-      "destination": "data:application/json;charset=utf-8,%7B%22id%22%3A%22123%22%2C%22name%22%3A%22Gemini%22%2C%22message%22%3A%22%E8%BF%99%E6%AC%A1%E6%98%AF%E9%80%9A%E8%BF%87%20Data%20URL%20%E6%88%90%E5%8A%9F%E7%94%9F%E6%88%90%E7%9A%84%20API%20%E5%93%8D%E5%BA%94%EF%BC%81%22%7D"
-    },
-    {
-      "source": "/",
-      "destination": "data:text/html;charset=utf-8,%3Ch1%3E%E6%AC%A2%E8%BF%8E%E4%BD%BF%E7%94%A8%20Vercel%3C%2Fh1%3E%3Cp%3E%E8%BF%99%E4%B8%AA%E9%A1%B5%E9%9D%A2%E4%B9%9F%E6%98%AF%E7%94%B1%20vercel.json%20%E9%80%9A%E8%BF%87%20Data%20URL%20%E6%8F%90%E4%BE%9B%E7%9A%84%E3%80%82%3C%2Fp%3E"
-    }
-  ],
   "redirects": [
     {
-      "source": "/google",
+      "source": "/(.*)",
       "destination": "https://www.google.com",
       "permanent": true
     }
