--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "$schema" “模式” : "https://openapi.vercel.sh/vercel.json",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "redirects": [
     {
       "source": "/(.*)",
-      "destination 目的地 ": "https://oucluoyu.top",
+      "destination": "https://oucluoyu.top",
       "permanent": true
     }
   ]
